--- a/package.json
+++ b/package.json
@@ -20,14 +20,15 @@
     "@hookform/resolvers": "^3.3.2",
     "@noble/hashes": "^1.3.3",
     "@supabase/supabase-js": "^2.38.4",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.10",
+    "@tailwindcss/typography": "^0.5.16",
     "argon2": "^0.31.2",
     "axios": "^1.6.0",
     "clsx": "^2.0.0",
     "crypto-js": "^4.2.0",
     "date-fns": "^2.30.0",
     "framer-motion": "^10.16.4",
-    "playwright": "^1.53.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.47.0",
